# hoyo-info-api

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build_and_deploy.yaml
app/: main.py
app/api/: __init__.py
app/api/hoyo_calendar/: data.py  router.py  schemas.py  services.py
app/api/hoyo_video/: data.py  router.py  schemas.py  services.py
app/core/: app.py  base_data.py  config.py
app/middleware/: logging.py
app/utils/: dir_watcher.py  logger.py
