[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.9"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.117.1",
    "fastapi-mcp>=0.4.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.37.0",
]
